fix entity overflow
Former-commit-id: e0650838f1bbb006bfba4c87e9478095f467d248

--- a/src/components/GlyphData/style.scss
+++ b/src/components/GlyphData/style.scss
@@ -1,5 +1,4 @@
 .glyph-data {
-  // height: 96px;
   background-color: rgba(rgb(40, 40, 40), 0.6);
   backdrop-filter: blur(15px);
   color: $colorWhite;
@@ -52,6 +51,14 @@
   &__content {
     padding-top: 8px;
     display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    overscroll-behavior: contain;
+
+    &::-webkit-scrollbar {
+      width: 0px;
+      height: 0px;
+  ***REMOVED***
 ***REMOVED***
 
   &__item {
